# pardus-panel

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
debian/: changelog  control  copyright  install  rules
po/: pardus-panel.pot  tr.po
src/pardus_panel/: __main__.py  i18n.py
src/pardus_panel/application/: app.py
src/pardus_panel/core/: async_jobs.py  command.py  formatting.py  lifecycle.py  paths.py  refresh.py
src/pardus_panel/data/applications/: tr.org.pardus.panel.desktop
src/pardus_panel/data/css/: base.css  navigation.css  performance.css  tables.css
src/pardus_panel/data/metainfo/: tr.org.pardus.panel.metainfo.xml
src/pardus_panel/data/ui/: Autostart.ui  Logs.ui  MainWindow.ui  Performance.ui  Power.ui  Process.ui  Services.ui  SystemInfo.ui
src/pardus_panel/features/autostart/: entities.py  parser.py  repository.py
src/pardus_panel/features/logs/: repository.py
src/pardus_panel/features/performance/: collector.py
src/pardus_panel/features/power/: collector.py
src/pardus_panel/features/processes/: repository.py  termination.py
src/pardus_panel/features/services/: repository.py
src/pardus_panel/features/system_info/: collector.py
src/pardus_panel/gtk/: builder.py
src/pardus_panel/gtk/pages/: autostart.py  logs.py  performance.py  power.py  processes.py  services.py  system_info.py
src/pardus_panel/gtk/widgets/: live_graph.py
tests/: test_autostart.py  test_core.py  test_system_features.py
tools/: i18n.sh
